# todo-rust-svelte

todo-backend/: Cargo.toml  database.sqlite  database.sqlite-shm  database.sqlite-wal  makefile
todo-backend/migrations/: 20230728182531_task.sql
todo-backend/src/: main.rs
todo-backend/src/api/: task.rs
todo-backend/src/models/: task.rs
todo-frontend/: package-lock.json  package.json
todo-frontend/src/routes/: +page.svelte
